Adiciona estilos para o tile de lista servicos

--- a/webpack/app/branco/brasilgovtemas.scss
+++ b/webpack/app/branco/brasilgovtemas.scss
@@ -2,7 +2,7 @@
 
 /********** Variaveis principais **********/
 
-$bg-color: #fff;
+$bg-color: #f8f8f8;
 $main-font: 'Raleway', sans-serif;
 $main-fontsize: 1rem;
 $main-width: 100%;
@@ -30,6 +30,7 @@ $description-color: #a6a6a6;
 $byline-color: #a6a6a6;
 
 $tile-link: #333;
+$tile-servicos: #1FC86A;
 
 $footer-color: #f1f1f1;
 $footer-text: #222222;
