--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -74,7 +74,7 @@ div.warning {
 
 /* cor de fundo das capas */
 body.portaltype-collective-cover-content {
-  background-color: #f8f8f8;
+  background-color: $bg-color;
 }
 
 
