Adiciona variavel para o bloco colorido

--- a/webpack/app/branco/brasilgovtemas.scss
+++ b/webpack/app/branco/brasilgovtemas.scss
@@ -31,6 +31,7 @@ $byline-color: #a6a6a6;
 
 $tile-link: #333;
 $tile-servicos: #1FC86A;
+$box-colorido: #3ab09e;
 
 $footer-color: #f1f1f1;
 $footer-text: #222222;
