Limpeza e organização das variáveis

--- a/webpack/app/scss/_basic.scss
+++ b/webpack/app/scss/_basic.scss
@@ -58,7 +58,7 @@ h5,
 h6 {
   font-family: $main-font;
   font-weight: 900;
-  color: $header-color;
+  color: $h-color;
   letter-spacing: normal;
   line-height: normal;
   letter-spacing: normal;
