--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -312,7 +312,7 @@ dd.image-caption {
   a, a:hover {
     font-size: 1.125rem;
     font-weight: bold;
-    color: $header-color !important;
+    color: $h-color !important;
     line-height: 1.39;
   }
   img {
