--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -1,17 +1,18 @@
 @charset 'UTF-8';
 
-/********** Variaveis principais **********/
+/* Globais */
 
 $bg-color: #f8f8f8;
 $main-font: 'Raleway', sans-serif;
 $main-fontsize: 1rem;
 $main-width: 100%;
 $main-color: #2969bd;
-$secondary-color: #06acff;
 $coluna-1: 300px;
 $coluna-2: 300px;
 $grid-gutter: 10px;
 $content-width: 1150px;
+
+/* Topo do site */
 
 $top-color: #2969bd;
 $top-text: #fff;
@@ -20,25 +21,34 @@ $top-icons: none;
 $top-border-color: rgba(256, 256, 256, 0.2);
 $top-busca-ativa: #fff;
 
+/* Navegacao */
+
 $nav-color: #fff;
 $nav-link: #333;
 
+/* Textos, titulos e links */
+
 $txt-color: #282828;
 $link-color: #0094ff;
-$header-color: #333333;
+$h-color: #333333;
 $description-color: #a6a6a6;
 $byline-color: #a6a6a6;
 
+/* Tiles */
+
 $tile-link: #333;
 $tile-servicos: #1FC86A;
-$box-colorido: #3ab09e;
+$tile-box-colorido: #3ab09e;
+$tile-etiqueta: #06acff;
+
+/* Rodape */
 
 $footer-color: #f1f1f1;
 $footer-text: #222222;
 $footer-link: #222222;
 
-
 /* variacao de cor do header */
+
 $fale-conosco: #244a7c;
 $fale-conosco-text: #fff;
 $fale-conosco-link: #fff;
