Adiciona uma variavel de tile

--- a/webpack/app/branco/brasilgovtemas.scss
+++ b/webpack/app/branco/brasilgovtemas.scss
@@ -40,6 +40,7 @@ $tile-link: #333;
 $tile-servicos: #1FC86A;
 $tile-box-colorido: #7c4f2c;
 $tile-etiqueta: #06acff;
+$tile-linha-destacada:#244a7c;
 
 /* Rodape */
 
