--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -40,6 +40,7 @@ $tile-link: #333;
 $tile-servicos: #1FC86A;
 $tile-box-colorido: #3ab09e;
 $tile-etiqueta: #06acff;
+$tile-linha-destacada:#244a7c;
 
 /* Rodape */
 
