--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -178,7 +178,7 @@ p.tile-description {
         text-transform: uppercase;
         font-weight: normal !important;
         font-size: 1rem;
-        color: #333;
+        color: $h-color;
     }
     .list-item {
         width: 20%;
@@ -235,7 +235,7 @@ p.tile-description {
     }
 }
 .linha-destacada .lista-blocos .tile-header h2 {
-    background: #f7f7f7 !important;
+    background: $tile-linha-destacada !important;
 }
 #content .lista-blocos .list-item p {
     color: #ccc;
@@ -423,7 +423,7 @@ p.tile-description {
 .portaltype-collective-cover-content #content div.row.linha-destacada {
     width: 100%!important;
     justify-content: center;
-    background: #244a7c;
+    background: $tile-linha-destacada;
     padding: 0 0 10px 0;
     margin: 0;
 
