--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -77,6 +77,7 @@ $central-conteudo-border-color: rgba(256, 256, 256, 0.2);
 @import '../scss/basic';
 @import '../scss/content';
 @import '../scss/contentcentral';
+@import '../scss/filterresults';
 @import '../scss/header';
 @import '../scss/albuns';
 @import '../scss/tiles';
