--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -415,7 +415,7 @@ dd.image-caption {
 
 /* colecao */
 .portaltype-collection,
-.template-filter-results {
+.template-filtro-de-resultados {
   .subtitle {
     font-size: 0.875rem;
     color: #069cff;
