--- a/webpack/app/scss/_contrast.scss
+++ b/webpack/app/scss/_contrast.scss
@@ -104,8 +104,8 @@ body.folder_contraste {
   &.portaltype-collective-cover-content #content div.row.linha-destacada .box-branco .tile a:link, 
   &.portaltype-collective-cover-content #content div.row.linha-destacada .box-branco .tile a:visited,
   &.portaltype-collection h2.tileHeadline a, 
-  &.template-filter-results h2.tileHeadline a,
-  &.portaltype-collection .keywords a, .template-filter-results .keywords a,
+  &.template-filtro-de-resultados h2.tileHeadline a,
+  &.portaltype-collection .keywords a, .template-filtro-de-resultados .keywords a,
   ul.paginacao li a {
     color: yellow !important;
     text-decoration: underline !important;
