--- a/webpack/app/scss/_search.scss
+++ b/webpack/app/scss/_search.scss
@@ -1,6 +1,6 @@
 /* busca */
 .template-busca,
-.template-filter-results,
+.template-filtro-de-resultados,
 .document-finder-tile {
     form h1.documentFirstHeading {
         display: none;
