--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -81,6 +81,7 @@ $central-conteudo-border-color: rgba(256, 256, 256, 0.2);
 @import '../scss/header';
 @import '../scss/albuns';
 @import '../scss/tiles';
+@import '../scss/tileshare';
 @import '../scss/portlets';
 @import '../scss/search';
 @import '../scss/footer';
