--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -106,6 +106,11 @@ p.tile-description {
         padding: 0 20px;
     }
 }
+.box-branco .nitf-basic-tile {
+    h1, h2, h3, h4, p {
+        padding: 0;
+    }
+}
 
 
 /* tile multimidia */
