--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -106,6 +106,11 @@ p.tile-description {
         padding: 0 20px;
     }
 }
+.box-branco .nitf-basic-tile {
+    h1, h2, h3, h4, p {
+        padding: 0;
+    }
+}
 
 
 /* tile multimidia */
@@ -123,12 +128,16 @@ p.tile-description {
 
 /* Noticia vinculada */
 .tile-vinculada {
+    h1, h2, h3, h4 {
+        display: flex;
+    }
     h1:before, h2:before, h3:before, h4:before {
         content: "-";
         @include sprite($vinculada);
         display: block;
         float: left;
         text-indent: -3000px;
+        width: 40px;
     }
 }
 /* Noticia com etiqueta */
@@ -298,6 +307,7 @@ p.tile-description {
 
     .tile-subtitle {
         font-size: 0.875rem !important;
+        margin-top: 60px;
     }
 
     h2 {
