--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -398,6 +398,7 @@ p.tile-description {
     img {
         object-fit: cover;
         height: 560px !important;
+        width: 100%;
         position: absolute;
         top: 0;
         z-index: -2;
@@ -414,7 +415,9 @@ p.tile-description {
         font-size: 1.75rem;
         line-height: 2.188rem;
     }
-
+    a, a:visited {
+        color: #fff !important;
+    }
     p a {
         color: #fff !important;
         background: transparent;
