Ajusta cursor do link do tile cabecalho

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -74,6 +74,7 @@ p.tile-description {
     font-size: 1rem;
     line-height: 1rem;
     font-weight: bold !important;
+    cursor: pointer;
 }
 #content a.outstanding-link:hover {
 	background: #06ACFF;
