Estilo para titulo grande

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -776,6 +776,11 @@ header.inverter .search-wrapper {
     display: inline-block;
 }
 
+/* titulo grande */
+.tile-noticia-destaque h1 {
+  font-size: 3rem !important;
+}
+
 /* geleria */
 .brasil-gallery-tile .gallery-title {
     color: #333 !important;
