altera cor da area de noticias

--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -56,7 +56,7 @@ $fale-conosco-link: #fff;
 $fale-conosco-icons: none;
 $fale-conosco-border-color: rgba(256, 256, 256, 0.2);
 
-$noticias: #06acff;
+$noticias: #2969BD;
 $noticias-text: #fff;
 $noticias-link: #fff;
 $noticias-icons: none;
