Corrige formatação das telas de configuração

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -216,6 +216,9 @@ dd.image-caption {
   position: relative;
   width: $content-width;
 }
+.has-portlets #viewlet-below-content {
+  width: 100% !important;
+}
 .portaltype-collective-nitf-content #viewlet-below-content {
   width: 960px;
 }
