--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -435,6 +435,7 @@ header#main-header.busca-ativa {
       width: 790px;
       margin: 0 auto;
       background-position: bottom center;
+      background-repeat: no-repeat;
       background-size: cover;
       background-color: $main-color;
       height: 620px;
@@ -444,17 +445,6 @@ header#main-header.busca-ativa {
       z-index: 0;
       padding-top: 198px;
       box-sizing: border-box;
-  }
-  header #portal-searchbox:after {
-      content: ".";
-      position: absolute;
-      background: #222;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      opacity: 0.2;
-      z-index: -1;
   }
 }
 
