Propriedades da imagem de fundo da busca home  (#216)
* Correção de estilos no background de busca do header expansível

* remove valor desneessario

--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -432,9 +432,9 @@ header#main-header.busca-ativa {
       top: 158px;
   }
   header #portal-searchbox {
-      width: 790px;
       margin: 0 auto;
       background-position: bottom center;
+      background-repeat: no-repeat;
       background-size: cover;
       background-color: $main-color;
       height: 620px;
@@ -444,17 +444,6 @@ header#main-header.busca-ativa {
       z-index: 0;
       padding-top: 198px;
       box-sizing: border-box;
-  }
-  header #portal-searchbox:after {
-      content: ".";
-      position: absolute;
-      background: #222;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      opacity: 0.2;
-      z-index: -1;
   }
 }
 
