Atera cor de fundo nos dois temas

--- a/webpack/app/branco/brasilgovtemas.scss
+++ b/webpack/app/branco/brasilgovtemas.scss
@@ -2,7 +2,7 @@
 
 /* Globais */
 
-$bg-color: #f8f8f8;
+$bg-color: #fff;
 $main-font: 'Raleway', sans-serif;
 $main-fontsize: 1rem;
 $main-width: 100%;
