--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -228,6 +228,11 @@ dd.image-caption {
   text-align: left;
   padding-bottom: 20px;
   color: #fff;
+  text-indent: -3000px;
+
+  span {
+    text-indent: initial;
+  }
 
   a.link-category, a.link-category:hover {
     background: #eee;
