--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -94,6 +94,11 @@ p.tile-description {
 #content .tile-default .share {
   filter: invert(100%);
 }
+/* exceto no destaque do topo */
+#content .linha-destaquetopo .tile-default .share {
+    filter: none;
+}
+
 
 /* header com fio separador */
 .tile.fio-separador {
@@ -145,7 +150,6 @@ p.tile-description {
         display: block;
         float: left;
         text-indent: -3000px;
-        width: 40px;
     }
 }
 /* Noticia com etiqueta */
@@ -679,6 +683,23 @@ p.tile-description {
 
 header.inverter .search-wrapper {
   border-bottom: 1px solid hsla(0,0%,100%,.2);
+}
+
+/* linha de fundo do header */
+.portaltype-collective-cover-content.template-view div.row.fundo-topo-escuro, 
+.portaltype-collective-cover-content.template-view div.row.fundo-topo-claro {
+    img {
+        height: fit-content;
+        object-fit: cover;
+    }
+    .tile::before {
+        display: none;
+    }
+    .tile-content {
+        height: initial;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
 }
 
 /* coluna discretas */
