--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -76,6 +76,7 @@ $central-conteudo-border-color: rgba(256, 256, 256, 0.2);
 @import '../scss/grid';
 @import '../scss/basic';
 @import '../scss/content';
+@import '../scss/tippreview';
 @import '../scss/contentcentral';
 @import '../scss/resultsfilter';
 @import '../scss/header';
